# LogAnalysisAndMonitoringSystem

./: .gitignore  ApiClient.cpp  ApiClient.h  CMakeLists.txt  Dockerfile  MainWindow.cpp  MainWindow.h  README.md  check_logs.sh  code_reading_guide.md  docker-compose.yml  generator_log.txt  main.cpp  moc_ApiClient.cpp  moc_MainWindow.cpp  project_resume.md  resume_for_project.md  run_system.sh  run_test_client.sh  system_log.txt  test.sh  test_network.sh  user_guide.md  user_manual.md  项目开发过程中的挑战与解决方案.md  项目方案.md
analysis/: log_analysis_20250511_030244.txt  log_analysis_20250511_030649.txt  log_analysis_final_20250511_030949.txt
api-gateway/: Dockerfile  go.mod  go.sum  main.go
examples/: CMakeLists.txt  README.md  alert_example.cpp  analyzer_example.cpp  collector_enhanced_example.cpp  complete_system_example.cpp  log_collector_example.cpp  mysql_storage_example.cpp  network_client_example.cpp  network_server_example.cpp  processor_example.cpp  redis_storage_example.cpp  storage_example.cpp  storage_factory_example.cpp  test_tcp_client.cpp  test_tcp_server.cpp
examples/collector_example/: CMakeLists.txt  collector_file_watch_example.cpp
examples/legacy/: README.md  network_example.cpp  storage_factory_example.cpp
include/xumj/alert/: alert_manager.h
include/xumj/analyzer/: analyzer_metrics.h  log_analyzer.h
include/xumj/collector/: log_collector.h
include/xumj/common/: lock_free_queue.h  log_entry.h  memory_pool.h  non_copyable.h  thread_pool.h
include/xumj/network/: tcp_client.h  tcp_server.h  网络模块使用指南.md
include/xumj/processor/: json_log_parser.h  log_processor.h  处理器模块设计与使用说明.md
include/xumj/storage/: README.md  mysql_storage.h  redis_storage.h  storage_factory.h
logs/strace/: output.txt
models/: AlertModel.cpp  AlertModel.h  LogModel.cpp  LogModel.h  MonitorModel.cpp  MonitorModel.h  RuleModel.cpp  RuleModel.h  moc_LogModel.cpp
proto/: alert_service.proto  log_service.proto
resources/qss/: modern.qss
scripts/: init.sql
src/: CMakeLists.txt
src/alert/: CMakeLists.txt  alert_manager.cpp
src/analyzer/: CMakeLists.txt  log_analyzer.cpp
src/collector/: CMakeLists.txt  collector_server.cpp  log_collector.cpp
src/common/: CMakeLists.txt  memory_pool.cpp  thread_pool.cpp
src/grpc/: CMakeLists.txt  alert_service_impl.cpp  alert_service_impl.h  log_service_impl.cpp  log_service_impl.h
src/network/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
src/processor/: CMakeLists.txt  log_processor.cpp  processor_server.cpp
src/processor/config/: config.json
src/storage/: CMakeLists.txt  mysql_storage.cpp  redis_storage.cpp  storage_factory.cpp
tests/: CMakeLists.txt  mysql_debug_test.cpp  run_parser_benchmark.sh  test_alert_manager.cpp  test_analyzer_rules.cpp  test_log_collector.cpp  test_log_collector_batch_performance.cpp  test_log_processor.cpp  test_service_integration.cpp  test_storage.cpp
tests/integration/: CMakeLists.txt  log_processing_integration_test.cpp.bak  说明.md
tests/performance/: CMakeLists.txt  parser_benchmark.cpp  说明.md
tools/: CMakeLists.txt
tools/log_generator/: *.h  CMakeLists.txt  benchmark.cpp  config.json  config说明.md  log4cpp_log_producer.cpp  log_generator.cpp  log_generator.h  log_generator_example.cpp
tools/log_generator/include/date/: date.h
tools/log_generator/include/faker/: Address.h  Base.h  Company.h  Data.h  ESports.h  JSON_Serializable.h  Name.h  Number.h  PhoneNumber.h  StringVector.h  json.hpp
views/: AlertView.cpp  AlertView.h  CollectorLogModel.cpp  CollectorLogModel.h  CollectorView.cpp  CollectorView.h  DraggableTableView.cpp  DraggableTableView.h  LogView.cpp  LogView.h  MonitorView.cpp  MonitorView.h  RuleView.cpp  RuleView.h  moc_LogView.cpp
